# PgKronika

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bdd-app  Dockerfile.bdd-builder  LICENSE  Makefile  README.md  README.ru.md  clippy.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
bins/pg_kronika-collector/: Cargo.toml  README.md  README.ru.md
bins/pg_kronika-collector/src/: budget.rs  buffering.rs  config.rs  coverage.rs  logging.rs  main.rs  main_sources.rs  os_sources.rs  pg_log_source.rs  plans_source.rs  pool_sources.rs  scheduler.rs  segments.rs  service_sections.rs  source_contracts.rs  statements_source.rs  tests.rs
bins/pg_kronika-collector/src/os_sources/: buffering.rs  cgroups.rs  process.rs  procfs_sections.rs
bins/pg_kronika-collector/src/tests/: buffering.rs  config.rs  coverage.rs  os.rs  runtime.rs  statements_source.rs  triggers.rs
bins/pg_kronika-demo/: Cargo.toml
bins/pg_kronika-demo/src/: cluster.rs  collector.rs  config.rs  load.rs  main.rs  measure.rs  schema.rs
bins/pg_kronika-demo/tests/: repack_estimate.rs  segment_breakdown.rs
bins/pg_kronika-web/: Cargo.toml  README.md  README.ru.md  openapi.json
bins/pg_kronika-web/benches/: anomalies.rs
bins/pg_kronika-web/src/: anomaly.rs  auth.rs  incident_input.rs  incident_response.rs  lib.rs  main.rs  params.rs  problem.rs  reason.rs  serialize.rs  startup.rs
bins/pg_kronika-web/src/handlers/: anomalies.rs  incidents.rs  metrics.rs  mod.rs  probes.rs  static_.rs  v1.rs
bins/pg_kronika-web/src/incident/: active.rs  cluster.rs  dispatch.rs  engine.rs  entity_join.rs  events.rs  evidence.rs  gauge_contracts.rs  lens.rs  lenses.rs  mod.rs  model.rs  os_lenses.rs  query_plan.rs  series.rs  typed.rs
bins/pg_kronika-web/src/overview/: cache.rs  cursor.rs  dto.rs  handlers.rs  health.rs  live.rs  mod.rs  view.rs
bins/pg_kronika-web/src/tests/: anomalies.rs  auth_static.rs  incidents.rs  mod.rs  overview_timeline.rs  probes_metrics.rs  problems.rs  sections.rs  version_diff.rs
bins/pg_kronika-web/static/: index.html
crates/kronika-analytics/: Cargo.toml  README.md  README.ru.md
crates/kronika-analytics/src/: lib.rs
crates/kronika-analytics/src/anomaly/: episode.rs
crates/kronika-analytics/src/diff/: pair.rs
crates/kronika-analytics/src/overview/: counts.rs  coverage.rs  finite.rs  health.rs  health_line.rs  mod.rs  notable.rs  observation.rs  oracle.rs  reduce.rs  sha256.rs
crates/kronika-anomaly/: Cargo.toml
crates/kronika-anomaly/src/: episode.rs  lib.rs  score.rs
crates/kronika-bdd/: Cargo.toml  README.md  README.ru.md
crates/kronika-bdd/features/: anomalies.feature  collection_coverage.feature  collector.feature  connection_pool.feature  gated_timings.feature  os_core.feature  os_wave2.feature  os_wave3.feature  pg_locks.feature  pg_log.feature  pg_prepared_xacts.feature  pg_settings.feature  pg_stat_activity.feature  pg_stat_archiver.feature  pg_stat_database.feature  pg_stat_io.feature  pg_stat_progress_vacuum.feature  pg_stat_statements.feature  pg_stat_wal.feature  pg_store_plans.feature  pg_store_plans_ossc.feature  replication_details.feature  replication_instance.feature  reset_metadata.feature  scheduler.feature  service_metadata.feature  smoke.feature  timeline_overview.feature  user_tables.feature  web_api.feature  wraparound.feature
crates/kronika-bdd/src/: cluster.rs  collector.rs  main.rs
crates/kronika-bdd/src/harness/: assert_row.rs  dump.rs  expected.rs  mod.rs  oracle.rs  session.rs  snapshot.rs  web.rs
crates/kronika-bdd/src/steps/: activity.rs  anomalies.rs  archiver.rs  collector.rs  common.rs  connection_pool.rs  database.rs  io.rs  log.rs  mod.rs  os.rs  prepared_xacts.rs  progress_vacuum.rs  replication_details.rs  replication_instance.rs  scheduler.rs  service_metadata.rs  settings.rs  smoke.rs  statements.rs  store_plans.rs  timeline.rs  user_tables.rs  wal.rs  web.rs
crates/kronika-derive/: Cargo.toml
crates/kronika-derive/src/: lib.rs
crates/kronika-format/: Cargo.toml  README.md  README.ru.md
crates/kronika-format/src/: catalog.rs  crc.rs  dictionary.rs  lib.rs  parts.rs  read_at.rs  str_id.rs
crates/kronika-format/tests/: dict_property.rs  fixture.rs  parts_property.rs  property.rs
crates/kronika-format/tests/fixtures/: minimal.pgm
crates/kronika-reader/: Cargo.toml  README.md  README.ru.md
crates/kronika-reader/benches/: diff_scan.rs  overview_codec.rs  serving.rs
crates/kronika-reader/src/: lib.rs  refresh.rs  snapshot.rs  unit.rs
crates/kronika-reader/src/overview/: block.rs  bytes.rs  container.rs  descriptors.rs  dictionary.rs  event_extract.rs  factcache.rs  factkey.rs  facts.rs  fallback.rs  gc.rs  limits.rs  live.rs  mod.rs  observations.rs  proptests.rs  publish.rs
crates/kronika-reader/src/query/: cursor.rs  diff.rs  gating.rs  gauge.rs  logical.rs  mod.rs  section.rs  value.rs
crates/kronika-reader/src/snapshot/: tests.rs
crates/kronika-registry/: Cargo.toml  README.md  README.ru.md
crates/kronika-registry/src/: codec.rs  contract.rs  generic.rs  lib.rs  pool.rs  section.rs  type_id.rs
crates/kronika-source-log/: Cargo.toml
crates/kronika-source-log/src/: collector.rs  lib.rs  normalize.rs  parser.rs  state.rs  tailer.rs
crates/kronika-source-os/: Cargo.toml
crates/kronika-source-os/src/: cgroup.rs  fs.rs  instance.rs  joins.rs  lib.rs  mount.rs  scope.rs
crates/kronika-source-pg/: Cargo.toml
crates/kronika-source-pg/src/: activity.rs  archiver.rs  database.rs  incident_gauges.rs  instance_metadata.rs  io.rs  lib.rs  locks.rs  pg_row.rs  pool.rs  prepared_xacts.rs  progress_vacuum.rs  replication_details.rs  replication_instance.rs  reset_metadata.rs  settings.rs  statements.rs  store_plans.rs  user_indexes.rs  user_tables.rs  wal.rs  wraparound.rs
crates/kronika-store/: Cargo.toml
crates/kronika-store/src/: lib.rs  local.rs  source.rs
crates/kronika-writer/: Cargo.toml  README.md  README.ru.md
crates/kronika-writer/src/: buffer.rs  dict.rs  interner.rs  journal.rs  lib.rs  segment.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+139 files in other folders)
