[package]
name = "xtask"
description = "Workspace maintenance tasks, not part of the release"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1"

[lints]
workspace = true
