[package]
name = "pg_kronika-collector"
description = "pgKronika collector daemon: snapshot PostgreSQL stats into sealed PGM segments"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../../crates/kronika-format" }
kronika-registry = { path = "../../crates/kronika-registry" }
kronika-source-os = { path = "../../crates/kronika-source-os" }
kronika-source-pg = { path = "../../crates/kronika-source-pg" }
kronika-writer = { path = "../../crates/kronika-writer" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = "0.7"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
