[package]
name = "pg_kronika-demo"
description = "Self-contained demo stand: synthetic PostgreSQL load, collector run, PGM/OVF size measurement"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-analytics = { path = "../../crates/kronika-analytics" }
kronika-reader = { path = "../../crates/kronika-reader" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "sync", "signal"] }
tokio-postgres = "0.7"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
serde_json = "1"

[lints]
workspace = true
