[package]
name = "pg_kronika-web"
description = "pgKronika binary"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-reader = { path = "../../crates/kronika-reader" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
serde_json = "1"
arc-swap = "1"

[dev-dependencies]
kronika-format = { path = "../../crates/kronika-format" }
kronika-registry = { path = "../../crates/kronika-registry" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
