[package]
name = "pg_kronika-web"
description = "Local PGM UI and JSON API with bounded diff, anomaly, and incident queries"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-analytics = { path = "../../crates/kronika-analytics" }
kronika-reader = { path = "../../crates/kronika-reader" }
kronika-registry = { path = "../../crates/kronika-registry" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
form_urlencoded = "1"
arc-swap = "1"
base64 = "0.22"
subtle = "2"
rust-embed = { version = "8", features = ["mime-guess"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
mimalloc = { version = "0.1", features = ["override"] }
sha2 = "0.10"

[dev-dependencies]
kronika-format = { path = "../../crates/kronika-format" }
kronika-writer = { path = "../../crates/kronika-writer" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "anomalies"
harness = false

[lints]
workspace = true
