[package]
name = "kronika-analytics"
description = "Source-independent analytics: counter diffs and spike scoring"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
