[package]
name = "kronika-analytics"
description = "Source-independent counter, anomaly, and overview contract kernels"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
