[package]
name = "kronika-bdd"
description = "BDD scenarios for collector integration tests inside Docker"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-source-pg = { path = "../kronika-source-pg" }
kronika-registry = { path = "../kronika-registry" }
kronika-reader = { path = "../kronika-reader" }
kronika-format = { path = "../kronika-format" }
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
tokio-postgres = "0.7"
anyhow = "1"
tempfile = "3"
portpicker = "0.1"
nix = { version = "0.29", features = ["signal"] }

[lints]
workspace = true
