[package]
name = "kronika-format"
description = "PGM container primitives: end catalog, tail index, CRC32C"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc = "3"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
