[package]
name = "kronika-reader"
description = "Segment read path: catalog, range reads, CRC-verified decode"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }
kronika-registry = { path = "../kronika-registry" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
