[package]
name = "kronika-reader"
description = "Segment read path: catalog, range reads, CRC-verified decode"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }
kronika-registry = { path = "../kronika-registry" }
kronika-diff = { path = "../kronika-diff" }
kronika-store = { path = "../kronika-store" }
arrow-array = "55"
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }

[dev-dependencies]
kronika-writer = { path = "../kronika-writer" }
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
mimalloc = { version = "0.1", features = ["override"] }

[[bench]]
name = "serving"
harness = false

[lints]
workspace = true
