[package]
name = "kronika-source-log"
description = "pgKronika internal crate"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
memchr = "2"
tokio-postgres = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
