[package]
name = "kronika-source-os"
description = "pgKronika internal crate"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-registry = { path = "../kronika-registry" }
rustix = { version = "1", features = ["param"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
