[package]
name = "kronika-source-os"
description = "Bounded Linux procfs, sysfs, filesystem, process, and cgroup collectors"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-registry = { path = "../kronika-registry" }
nix = { version = "0.29", features = ["fs", "user"] }
rustix = { version = "1", features = ["param", "fs"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
