[package]
name = "kronika-source-pg"
description = "PostgreSQL collectors: query stat views into typed registry rows"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-registry = { path = "../kronika-registry" }
tokio-postgres = "0.7"

[lints]
workspace = true
