[package]
name = "kronika-store"
description = "pgKronika internal crate"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
