[package]
name = "kronika-store"
description = "Read-only local PGM directory and live-journal scanning"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
