[package]
name = "kronika-writer"
description = "Write path: string interner, buffers, parts journal, merge and seal"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }

[lints]
workspace = true
