[package]
name = "kronika-writer"
description = "Write path: string interner, buffers, parts journal, merge and seal"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
