[package]
name = "kronika-writer"
description = "Writer-side segment state and active.parts journal"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kronika-format = { path = "../kronika-format" }
kronika-registry = { path = "../kronika-registry" }
arrow-array = "55"
arrow-schema = "55"
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
